ecms_base/themes/custom/ecms/assets/patterns/00-atoms/06-buttons/_00-buttons.scss
@mixin button-disabled-style {
  background-color: transparent;
  background: repeating-linear-gradient(-45deg,
    var(--fc__default__button__bg),
    var(--fc__default__button__bg) 0.5em,
    var(--fc__default__button--hover__bg) 0.5em,
    var(--fc__default__button--hover__bg) 1em);
  cursor: default;
  opacity: 0.6;
  pointer-events: none;
}

button,
.qh__btn,
.button {
  border: 0;
  border-radius: $button-border-radius;
  display: inline-block;
  font-weight: 500;
  letter-spacing: $kerning-base;
  overflow: hidden;
  padding: $button-v-spacing $button-h-spacing;
  transition: $transition-base;
  user-select: none;
  vertical-align: middle;

  // Primary color theme (highlight, more colorful)
  // :visited on a <button> is not a thing but most of the time these may be <a>s
  &,
  &:visited {
    background-color: var(--fc__default__button__bg);
    background-image: linear-gradient(rgba(#fff, 0.125) 10%,
      rgba(#fff, 0) 50%,
      rgba(#000, 0) 80%,
      rgba(#000, 0.125) 100%);
    color: var(--fc__default__button__fg);
    text-decoration: none;
  }

  &:hover,
  &:focus {
    background-color: var(--fc__default__button--hover__bg);
    color: var(--fc__default__button--hover__fg);
  }

  &:focus {
    outline: $border-sm solid var(--fc__default__link--focus);
    outline-offset: $border-sm;
  }

  &:disabled {
    @include button-disabled-style;
  }

  // Opinionated: add "hand" cursor to non-disabled .btn elements
  &:not(:disabled) {
    cursor: pointer;
  }
}

.qh__btn {
  // Uses the default accent colors. Inverses on hover.
  &--accent {
    &,
    &:visited {
      background-color: var(--fc__default__accent);
      color: var(--fc__default__accent__fg);
    }

    &:hover,
    &:focus {
      background-color: var(--fc__default__accent__fg);
      color: var(--fc__default__accent);
    }
  }

  // More subdued color theme based on primary--light
  &--secondary {
    &,
    &:visited {
      background-color: var(--fc__primary--light__bg);
      color: var(--fc__primary--light__fg);
    }

    &:hover,
    &:focus {
      background-color: var(--fc__default__fg);
      color: var(--fc__default__bg);
    }

    // Inside a column container, add space between
    .qh__paragraph__column-container & + & {
      margin-block-start: var(--vertical-rhythm);
    }

    html:where(:not(.light)) {
      &,
      &:visited {
        background-color: var(--fc__primary--light__bg--dark);
        color: var(--fc__primary--light__fg--dark);
      }

      &:hover,
      &:focus {
        background-color: var(--fc__default__fg--dark);
        color: var(--fc__default__bg--dark);
      }
    }

    @media (prefers-color-scheme: dark) {
      html:where(:not(.light)) {
        &,
        &:visited {
          background-color: var(--fc__primary--light__bg--dark);
          color: var(--fc__primary--light__fg--dark);
        }

        &:hover,
        &:focus {
          background-color: var(--fc__default__fg--dark);
          color: var(--fc__default__bg--dark);
        }
      }
    }
  }

  &--small {
    // font-size: 87.5%; !important rule is overriding this temporarily
    // Using variable defintions might be the best way to do it anyway
    --font-size-min-value: var(--st-size-s);
    --font-size-max-value: var(--st-size-l);
    --font-size-scaler-value: var(--st-scaler-value);
    --font-lh-min-value: var(--st-lh-s);
    --font-lh-max-value: var(--st-lh-l);
    --font-lh-scaler-value: var(--st-lh-scaler-value);
    padding: 0.5em 0.625em;
  }

  // Button with SVG
  // SVG should appear first and then text. Do not include wrapper around SVG.
  &--icon {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: center;
    gap: 0.5em;

    &::after {
      content: none !important;
    }

    > svg {
      --icon-size: 3em;

      min-width: var(--icon-size);
      width: var(--icon-size);
      height: var(--icon-size);
      position: relative;
      left: -0.625em;

      @include breakpoint-between($bp--small, $bp--large) {
        left: 0;
      }
    }
  }

  > span {
    flex: inherit;
  }

  &:disabled,
  &--disabled {
    @include button-disabled-style;
  }

  // Opinionated: Add "hand" cursor to non-disabled .btn elements
  &:not(&--disabled):not(&:disabled) {
    cursor: pointer;
  }

  // Reset other button elements
  button#{&},
  &[type='button'],
  &[type='reset'],
  &[type='submit'] {
    @include qh-button-reset();
  }
}

// Utility

// Treat a <button> visually like a text link
.qh__u__btn-as-text {
  border-radius: 0;
  display: inline;
  hyphens: none;
  line-height: inherit;
  padding: 0;
  text-align: inherit;
  user-select: auto;
  white-space: normal;

  &,
  &:visited,
  &:hover,
  &:focus {
    background-color: transparent;
    background-image: none;
    color: var(--fc__default__link);
  }

  &,
  &:visited {
    color: var(--fc__default__link);
  }

  &:hover,
  &:focus {
    color: var(--fc__default__link--hover);
  }

  &:active {
    color: var(--fc__default__link--active);
  }
}

